--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "app/assets/tonnetz-viz"]
-	path = app/assets/tonnetz-viz
+[submodule "app/src/main/assets/tonnetz-viz"]
+	path = app/src/main/assets/tonnetz-viz
 	url = https://github.com/k-hatano/tonnetz-viz.git
