--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
+
+    // check the latest release version with https://github.com/kshoji/javax.sound.midi-for-Android/releases/latest
+    compile 'jp.kshoji:javax-sound-midi:0.0.3:@aar'
+    // check the latest release version with https://github.com/kshoji/USB-MIDI-Driver/releases/latest
+    compile 'jp.kshoji:midi-driver:0.1.4:@aar'
 }
 
